--- a/DecisionTree/ActScience.ipynb
+++ b/DecisionTree/ActScience.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
        "[10 rows x 241 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +751,7 @@
        "17                 PC4     course_Eng Ess 10"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -819,30 +819,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running Grid Search\n",
-      "Done\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "{'max_depth': 32, 'min_samples_leaf': 8}"
+       "'\\nmax_depth_values= [8,12,25,32]\\nmin_samples_leaf_values = [4,5,8,10]\\nparam_grid = {\\'max_depth\\' : list(max_depth_values), \\'min_samples_leaf\\' : list(min_samples_leaf_values)}\\n\\n\\n#Grid Search to find the best hyperparameters \\nprint(\"Running Grid Search\")\\ndt_regressor = DecisionTreeRegressor()\\n\\n# will have a 3-fold cross validation \\ndt_grid = GridSearchCV(dt_regressor, param_grid, cv=3, scoring=\\'neg_root_mean_squared_error\\')\\ndt_grid_search = dt_grid.fit(X_train, y_train)\\n\\nprint(\"Done\")\\ndt_best_params = dt_grid_search.best_params_\\n\\ndt_best_params\\n'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#possible hyperparameters\n",
+    "'''\n",
     "max_depth_values= [8,12,25,32]\n",
     "min_samples_leaf_values = [4,5,8,10]\n",
     "param_grid = {'max_depth' : list(max_depth_values), 'min_samples_leaf' : list(min_samples_leaf_values)}\n",
@@ -860,12 +853,13 @@
     "dt_best_params = dt_grid_search.best_params_\n",
     "\n",
     "dt_best_params\n",
+    "'''\n",
     "#{'max_depth': 32, 'min_samples_leaf': 8}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -884,8 +878,8 @@
       "   macro avg       0.76      0.70      0.69       516\n",
       "weighted avg       0.75      0.72      0.70       516\n",
       "\n",
-      "[DT] Root Mean Squared Error: 0.2120098059236692\n",
-      "[DT] R2: 0.3414372852673967\n"
+      "[DT] Root Mean Squared Error: 0.2115857377462214\n",
+      "[DT] R2: 0.34406920298911625\n"
      ]
     },
     {
@@ -922,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -943,12 +937,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using most of the columns"
+    "no PCA"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +990,7 @@
        "Length: 241, dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1016,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1058,7 @@
        "{'max_depth': 12, 'min_samples_leaf': 4}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1094,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1108,7 @@
       "weighted avg       0.71      0.69      0.66       516\n",
       "\n",
       "[DT] Root Mean Squared Error: 0.2264760557592268\n",
-      "[DT] R2: 0.27986608469888696\n"
+      "[DT] R2: 0.27986608469888685\n"
      ]
     },
     {
@@ -1151,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1178,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1192,10 +1186,10 @@
       "40    course_BandConcer.5    0.041733\n",
       "23    course_Alg Esntls B    0.027396\n",
       "..                    ...         ...\n",
-      "225   course_WH 1500-P-CR    0.000000\n",
-      "223    course_Vocal III 1    0.000000\n",
-      "231  school_High School A    0.000000\n",
       "230    course_YrbkIII9-12    0.000000\n",
+      "233  school_High School C    0.000000\n",
+      "232  school_High School B    0.000000\n",
+      "231  school_High School A    0.000000\n",
       "237          bbb_literacy    0.000000\n",
       "\n",
       "[238 rows x 2 columns]\n"
@@ -1216,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1278,7 +1272,7 @@
        "    <tr>\n",
        "      <th>76</th>\n",
        "      <td>course_Eng Gr10 Adv</td>\n",
-       "      <td>0.023848</td>\n",
+       "      <td>0.023094</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>208</th>\n",
@@ -1291,9 +1285,9 @@
        "      <td>0.021121</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>80</th>\n",
-       "      <td>course_English Gr 9</td>\n",
-       "      <td>0.017896</td>\n",
+       "      <th>198</th>\n",
+       "      <td>course_USHis I Adv</td>\n",
+       "      <td>0.018834</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1307,19 +1301,26 @@
        "40   course_BandConcer.5    0.041733\n",
        "23   course_Alg Esntls B    0.027396\n",
        "156   course_Phy Sci Adv    0.024391\n",
-       "76   course_Eng Gr10 Adv    0.023848\n",
+       "76   course_Eng Gr10 Adv    0.023094\n",
        "208        course_VarFBI    0.021303\n",
        "123  course_Intermed Agr    0.021121\n",
-       "80   course_English Gr 9    0.017896"
+       "198   course_USHis I Adv    0.018834"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "importance_df_Science.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SHAP"
    ]
   }
  ],
