--- a/LinearRegression/LinearRegression.ipynb
+++ b/LinearRegression/LinearRegression.ipynb
@@ -39,9 +39,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/mayapatel/LevelData/predicting-proficiency/LinearRegression/LinearRegression.ipynb Cell 3\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mayapatel/LevelData/predicting-proficiency/LinearRegression/LinearRegression.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m#Loading the dataframe\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/mayapatel/LevelData/predicting-proficiency/LinearRegression/LinearRegression.ipynb#W2sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m filename \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(os\u001b[39m.\u001b[39mgetcwd(), \u001b[39m\"\u001b[39m\u001b[39m..\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mdataframes\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mactMath_11_encoded_df.csv\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mayapatel/LevelData/predicting-proficiency/LinearRegression/LinearRegression.ipynb#W2sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m actMath11_df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(filename, header \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#Loading the dataframe\n",
     "filename = os.path.join(os.getcwd(), \"..\", \"dataframes\", \"actMath_11_encoded_df.csv\")\n",
@@ -50,228 +62,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>studentId</th>\n",
-       "      <th>is_proficient</th>\n",
-       "      <th>proficient_score</th>\n",
-       "      <th>school_High School A</th>\n",
-       "      <th>school_High School B</th>\n",
-       "      <th>school_High School C</th>\n",
-       "      <th>school_High School D</th>\n",
-       "      <th>iready_math</th>\n",
-       "      <th>iready_reading</th>\n",
-       "      <th>bbb_literacy</th>\n",
-       "      <th>...</th>\n",
-       "      <th>category_PERFORMING_ARTS</th>\n",
-       "      <th>category_VISUAL_ARTS</th>\n",
-       "      <th>category_TECHNOLOGY</th>\n",
-       "      <th>category_BUSINESS</th>\n",
-       "      <th>category_TRADES</th>\n",
-       "      <th>category_AGRICULTURE</th>\n",
-       "      <th>category_PHYSICAL_EDUCATION</th>\n",
-       "      <th>category_HEALTH</th>\n",
-       "      <th>category_CAREER_PREP</th>\n",
-       "      <th>category_MILITARY_SCIENCE</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>45054</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.26</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>45054</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.26</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>45440</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.94</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>45440</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.94</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>45440</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.94</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 25 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   studentId  is_proficient  proficient_score  school_High School A  \\\n",
-       "0      45054              0              0.26                     1   \n",
-       "1      45054              0              0.26                     1   \n",
-       "2      45440              0              0.94                     0   \n",
-       "3      45440              0              0.94                     0   \n",
-       "4      45440              0              0.94                     0   \n",
-       "\n",
-       "   school_High School B  school_High School C  school_High School D  \\\n",
-       "0                     0                     0                     0   \n",
-       "1                     0                     0                     0   \n",
-       "2                     0                     0                     0   \n",
-       "3                     0                     0                     0   \n",
-       "4                     0                     0                     0   \n",
-       "\n",
-       "   iready_math  iready_reading  bbb_literacy  ...  category_PERFORMING_ARTS  \\\n",
-       "0            0               0             0  ...                         0   \n",
-       "1            0               0             0  ...                         0   \n",
-       "2            0               0             0  ...                         0   \n",
-       "3            0               0             0  ...                         0   \n",
-       "4            0               0             0  ...                         0   \n",
-       "\n",
-       "   category_VISUAL_ARTS  category_TECHNOLOGY  category_BUSINESS  \\\n",
-       "0                     0                    0                  0   \n",
-       "1                     0                    0                  0   \n",
-       "2                     0                    0                  0   \n",
-       "3                     0                    0                  0   \n",
-       "4                     0                    0                  0   \n",
-       "\n",
-       "   category_TRADES  category_AGRICULTURE  category_PHYSICAL_EDUCATION  \\\n",
-       "0                1                     0                            0   \n",
-       "1                1                     0                            0   \n",
-       "2                0                     0                            0   \n",
-       "3                0                     0                            0   \n",
-       "4                0                     0                            0   \n",
-       "\n",
-       "   category_HEALTH  category_CAREER_PREP  category_MILITARY_SCIENCE  \n",
-       "0                0                     0                          0  \n",
-       "1                0                     0                          0  \n",
-       "2                0                     0                          0  \n",
-       "3                0                     0                          0  \n",
-       "4                0                     0                          0  \n",
-       "\n",
-       "[5 rows x 25 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'actMath11_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/mayapatel/LevelData/predicting-proficiency/LinearRegression/LinearRegression.ipynb Cell 4\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/mayapatel/LevelData/predicting-proficiency/LinearRegression/LinearRegression.ipynb#W3sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m actMath11_df[actMath11_df\u001b[39m.\u001b[39mselect_dtypes(include\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mbool\u001b[39m\u001b[39m'\u001b[39m)\u001b[39m.\u001b[39mcolumns] \u001b[39m=\u001b[39m actMath11_df\u001b[39m.\u001b[39mselect_dtypes(include\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mbool\u001b[39m\u001b[39m'\u001b[39m)\u001b[39m.\u001b[39mastype(\u001b[39mint\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/mayapatel/LevelData/predicting-proficiency/LinearRegression/LinearRegression.ipynb#W3sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m actMath11_df\u001b[39m.\u001b[39mhead()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'actMath11_df' is not defined"
+     ]
     }
    ],
    "source": [
