Update documentation for syncing data

--- a/process_data.ipynb
+++ b/process_data.ipynb
@@ -13,10 +13,18 @@
     "```\n",
     "data/\n",
     "├── raw/\n",
-    "│   ├── district.json\n",
+    "│   ├── 2023 District 18 Scores.json\n",
+    "│   ├── 2023 District 18 Student Attributes.json\n",
+    "│   ├── 2023 District 18 Vendor Student Usage.json\n",
+    "│   ├── 2024-09-11 District A Vendor Student Usage.json\n",
     "│   ├── 2024-09-11_District_A_Benchmarks.json\n",
     "│   ├── 2024-09-11_District_A_Scores.json\n",
-    "│   └── ... (future raw data files)\n",
+    "│   ├── benchmarksByMeasurement_202410141332.json\n",
+    "│   ├── district.json\n",
+    "│   ├── District 18 Anonymized Schools.json\n",
+    "│   ├── District 18 Vendor Usage Types.json\n",
+    "│   ├── vendorProducts_202409111049.csv\n",
+    "│   └── vendors_202410081500.json\n",
     "├── processed/\n",
     "└── archive/\n",
     "README.md\n",
